--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,91 @@ body {
 	margin: 0 auto;
 	background: #fff;
 	padding: 0 45px 20px;
+	margin: 0 auto;
 }
 
 /* Write all remaining styles here */
+header a{
+	color:rgb(152,173,166);
+	text-decoration: none;
+}
+
+h1{
+	font-size: 5em;
+	font-weight: normal;
+	font-family: 'Baskerville',serif;
+	margin: 0 0 5px;
+	border-bottom: 1px solid #ccc;
+	padding-bottom: 10px;
+}
+
+#featured img{
+	border: 5px solid;
+	color:rgb(152,173,166);
+}
+
+header{
+	display:block;
+	border-bottom: 1px;
+}
+/*---------- ABOUT--------*/
+h2{
+	color:rgb(111,127,122);
+	font-size: 2em;
+	text-decoration: none;
+	display: block;
+	-webkit-margin-before: 0.83em;
+  	-webkit-margin-after: 0.83em;
+  	-webkit-margin-start: 0px;
+  	-webkit-margin-end: 0px;
+  	font-weight: bold;
+}
+
+p{
+	display: block;
+	color: #555;
+	font-size: 1em;
+	margin: 0 0 20px 0;
+}
+
+#featured a{
+	color: #1783bb;
+	text-decoration: none;
+}
+
+/*------PRESS----*/
+#press h2{
+	color:rgb(111,127,122);
+	display: block;
+}
+
+#press img{
+	border: 5px #ccc solid;
+	padding: 1px;
+}
+
+#press{
+	padding-bottom: 20px;
+}
+
+#press img:hover{
+	border-color:rgb(111,127,122);
+}
+
+/*---- FOOTER ----*/
+
+footer {
+	text-align: right;
+
+}
+
+ .small{
+	font-size: 0.8em;
+	text-decoration: none;
+}
+
+
+
+
+
+
